# misskey-rs

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  CONTRIBUTING_ja.md  Cargo.toml  Dockerfile  deny.toml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  rustfmt.toml
crates/api/: Cargo.toml
crates/api/src/: extractors.rs  lib.rs  middleware.rs  rate_limit.rs  response.rs  sse.rs  streaming.rs
crates/api/src/endpoints/: account.rs  admin.rs  announcements.rs  antennas.rs  auth.rs  blocking.rs  channels.rs  clips.rs  drive.rs  emojis.rs  favorites.rs  following.rs  gallery.rs  groups.rs  hashtags.rs  lists.rs  messaging.rs  meta.rs  metrics.rs  mod.rs  muting.rs  notes.rs  notifications.rs  oauth.rs  pages.rs  poll.rs  reactions.rs  scheduled_notes.rs  search.rs  security_keys.rs  sw.rs  translation.rs  two_factor.rs  users.rs  webhooks.rs  word_filters.rs
crates/api/tests/: api_integration.rs
crates/common/: Cargo.toml
crates/common/src/: config.rs  crypto.rs  error.rs  http_signature.rs  id.rs  lib.rs  metrics.rs  storage.rs  url_preview.rs  url_preview_cache.rs
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/core/src/services/: account.rs  announcement.rs  antenna.rs  blocking.rs  channel.rs  clip.rs  delivery.rs  drive.rs  email.rs  emoji.rs  event_publisher.rs  filter_group.rs  following.rs  gallery.rs  group.rs  hashtag.rs  instance.rs  jobs.rs  media.rs  messaging.rs  meta_settings.rs  mod.rs  moderation.rs  muting.rs  note.rs  note_favorite.rs  notification.rs  oauth.rs  page.rs  poll.rs  push_notification.rs  reaction.rs  recurring_post.rs  registration_approval.rs  scheduled_note.rs  search.rs  storage.rs  translation.rs  two_factor.rs  user.rs  (+4 more)
crates/db/: Cargo.toml
crates/db/src/: lib.rs  test_utils.rs
crates/db/src/entities/: abuse_report.rs  account_deletion.rs  announcement.rs  announcement_read.rs  antenna.rs  antenna_note.rs  blocking.rs  channel.rs  channel_following.rs  clip.rs  clip_note.rs  drive_file.rs  drive_folder.rs  emoji.rs  export_job.rs  filter_group.rs  follow_request.rs  following.rs  gallery_like.rs  gallery_post.rs  group.rs  group_invite.rs  group_member.rs  hashtag.rs  import_job.rs  instance.rs  messaging_message.rs  meta_settings.rs  mod.rs  muting.rs  note.rs  note_edit.rs  note_favorite.rs  notification.rs  oauth_app.rs  oauth_token.rs  page.rs  page_like.rs  poll.rs  poll_vote.rs  (+14 more)
crates/db/src/migrations/: m20250101_000001_create_user_table.rs  m20250101_000002_create_note_table.rs  m20250101_000003_create_user_profile_table.rs  m20250101_000004_create_following_table.rs  m20250101_000005_create_follow_request_table.rs  m20250101_000006_create_blocking_table.rs  m20250101_000007_create_muting_table.rs  m20250101_000008_create_drive_file_table.rs  m20250101_000009_create_reaction_table.rs  m20250101_000010_create_notification_table.rs  m20250101_000011_create_user_keypair_table.rs  m20250101_000012_create_drive_folder_table.rs  m20250101_000013_create_emoji_table.rs  m20250101_000014_create_announcement_table.rs  m20250101_000015_create_messaging_message_table.rs  m20250101_000016_add_fulltext_search.rs  m20250101_000017_create_clip_table.rs  m20250101_000018_add_pinned_note_ids.rs  m20250101_000019_create_note_edit_table.rs  m20250101_000020_create_word_filter_table.rs  m20250101_000021_create_scheduled_note_table.rs  m20250101_000022_add_two_factor_backup_codes.rs  m20250101_000023_create_antenna_table.rs  m20250101_000024_create_channel_table.rs  m20250101_000025_create_instance_table.rs  m20250101_000026_create_security_key_table.rs  m20250101_000027_create_oauth_tables.rs  m20250101_000028_create_webhook_table.rs  m20250101_000029_create_page_table.rs  m20250101_000030_create_gallery_table.rs  m20250101_000031_create_push_subscription_table.rs  m20250101_000032_add_account_migration_fields.rs  m20250101_000033_create_group_table.rs  m20250101_000034_add_channel_id_to_note.rs  m20250101_000035_add_community_features.rs  m20250101_000036_add_admin_settings.rs  m20250101_000037_add_bubble_instances.rs  m20250101_000038_add_hide_bots_to_user_profile.rs  m20250101_000039_add_default_reaction.rs  m20250101_000040_add_dm_restriction.rs  (+6 more)
crates/db/src/repositories/: account_deletion.rs  announcement.rs  antenna.rs  blocking.rs  channel.rs  clip.rs  drive_file.rs  drive_folder.rs  emoji.rs  export_job.rs  filter_group.rs  follow_request.rs  following.rs  gallery.rs  group.rs  hashtag.rs  import_job.rs  instance.rs  messaging.rs  meta_settings.rs  mod.rs  moderation.rs  muting.rs  note.rs  note_favorite.rs  notification.rs  oauth.rs  page.rs  poll.rs  push_subscription.rs  reaction.rs  recurring_post.rs  scheduled_note.rs  security_key.rs  user.rs  user_keypair.rs  user_list.rs  user_profile.rs  webhook.rs  word_filter.rs
crates/db/tests/: db_integration.rs  query_analysis.rs
crates/federation/: Cargo.toml
crates/federation/src/: cache.rs  client.rs  delivery.rs  lib.rs  security.rs  signature.rs
crates/federation/src/activities/: accept.rs  announce.rs  create.rs  delete.rs  emoji_react.rs  follow.rs  like.rs  mod.rs  move_activity.rs  reject.rs  undo.rs  update.rs
crates/federation/src/actors/: group.rs  mod.rs  person.rs
crates/federation/src/convert/: channel.rs  mod.rs  note.rs  user.rs
crates/federation/src/handler/: channel.rs  collections.rs  inbox.rs  mod.rs  nodeinfo.rs  user.rs  webfinger.rs
crates/federation/src/middleware/: mod.rs  signature_verification.rs
crates/federation/src/objects/: mod.rs  note.rs
crates/federation/src/processor/: accept.rs  actor_fetcher.rs  announce.rs  (+10 more)
crates/federation/tests/: compatibility_tests.rs  federation_integration.rs  local_federation_test.rs
crates/mfm/: Cargo.toml
crates/mfm/src/: lib.rs  nodes.rs  parser.rs  render.rs
crates/queue/: Cargo.toml
crates/queue/src/: delivery_impl.rs  lib.rs  pubsub.rs  rate_limit.rs  retry.rs  scheduler.rs  shared_inbox.rs
crates/queue/tests/: queue_integration.rs  redis_integration.rs
crates/server/: Cargo.toml
crates/server/src/: main.rs
(+46 files in other folders)
