[workspace]
resolver = "2"
members = [
    "crates/common",
    "crates/db",
    "crates/core",
    "crates/federation",
    "crates/api",
    "crates/queue",
    "crates/mfm",
    "crates/server",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["Misskey-rs Contributors"]
license = "AGPL-3.0"
repository = "https://github.com/example/misskey-rs"
rust-version = "1.85"

[workspace.dependencies]
# Web Framework
axum = { version = "0.8", features = ["macros", "ws", "multipart"] }
axum-extra = { version = "0.10", features = ["typed-header", "cookie"] }
tower = "0.5"
tower-http = { version = "0.6", features = [
    "cors",
    "trace",
    "timeout",
    "compression-gzip",
    "limit",
] }

# ActivityPub
activitypub_federation = { version = "0.6", features = ["axum"] }

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-chrono",
    "with-json",
    "with-uuid",
] }
sea-orm-migration = "1.1"

# Redis
fred = { version = "10", features = ["subscriber-client"] }

# Job Queue
apalis = { version = "0.7", features = ["limit", "tracing", "retry"] }
apalis-redis = "0.7"
redis = { version = "0.32", features = ["tokio-comp"] }

# Runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }

# Validation
validator = { version = "0.19", features = ["derive"] }

# Error Handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "v7", "serde"] }
ulid = "1"
url = { version = "2", features = ["serde"] }
async-trait = "0.1"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
bytes = "1"

# Security
argon2 = "0.5"
jsonwebtoken = "9"
base64 = "0.22"
sha2 = "0.10"
rsa = "0.9"
pkcs8 = { version = "0.10", features = ["pem"] }
signature = "2"
rand = "0.8"

# Config
config = "0.14"
dotenvy = "0.15"

# MFM
regex = "1"
once_cell = "1"

# 2FA
totp-rs = { version = "5", features = ["gen_secret", "otpauth", "qr"] }

# WebAuthn/Passkey
webauthn-rs = { version = "0.5", default-features = false, features = ["danger-allow-state-serialisation"] }
webauthn-rs-proto = "0.5"

# OpenSSL (vendored for cross-platform builds)
openssl = { version = "0.10", features = ["vendored"] }

# HMAC
hmac = "0.12"
hex = "0.4"

# Internal crates
misskey-common = { path = "crates/common" }
misskey-db = { path = "crates/db" }
misskey-core = { path = "crates/core" }
misskey-federation = { path = "crates/federation" }
misskey-api = { path = "crates/api" }
misskey-queue = { path = "crates/queue" }
misskey-mfm = { path = "crates/mfm" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
redundant_clone = "warn"
implicit_clone = "warn"
cloned_instead_of_copied = "warn"
unwrap_used = "deny"
expect_used = "warn"
panic = "warn"
todo = "warn"
unimplemented = "warn"
# Allow common pedantic exceptions
module_name_repetitions = "allow"
# Allow missing cargo metadata for internal packages
cargo_common_metadata = "allow"
# Allow multiple crate versions (dependency issue, hard to control)
multiple_crate_versions = "allow"
# Allow missing error docs (too many to fix at once)
missing_errors_doc = "allow"
# Allow missing panic docs
missing_panics_doc = "allow"
# Allow implicit hasher (design decision)
implicit_hasher = "allow"
# Allow cast truncation and precision loss (intentional in metrics)
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
# Allow too many lines (refactoring needed)
too_many_lines = "allow"
# Allow format push string (performance optimization can be done later)
format_push_string = "allow"
# Allow option_if_let_else (readability preference)
option_if_let_else = "allow"
# Allow cast_possible_wrap (intentional in some cases)
cast_possible_wrap = "allow"
# Allow unused_async (false positives, may need async for trait bounds)
unused_async = "allow"
# Allow float_cmp in tests
float_cmp = "allow"
# Allow case-sensitive file extension comparisons in tests
case_sensitive_file_extension_comparisons = "allow"
# Allow similar names (blocker_id/blockee_id, etc. are domain terms)
similar_names = "allow"
# Allow excessive bools in structs (DB models have many boolean fields)
struct_excessive_bools = "allow"
# Allow doc link with quotes (false positives for JSON examples)
doc_link_with_quotes = "allow"
# Allow enum variant names (migration code uses specific names)
enum_variant_names = "allow"
# Allow too many arguments (some domain functions need many params)
too_many_arguments = "allow"
# Allow assigning clones (sometimes more readable than clone_from)
assigning_clones = "allow"
# Allow large enum variants (ActivityPub objects are large by design)
large_enum_variant = "allow"
# Allow cast sign loss (intentional in some conversions)
cast_sign_loss = "allow"
# Allow needless collect (sometimes improves readability)
needless_collect = "allow"
# Allow unnecessary filter_map (sometimes clearer intent)
unnecessary_filter_map = "allow"
# Allow manual let-else (sometimes clearer with match)
manual_let_else = "allow"
# Allow unused self (methods may use self in future)
unused_self = "allow"
# Allow ref option (sometimes needed for API compatibility)
ref_option = "allow"
# Allow struct field names with common suffixes (domain terminology)
struct_field_names = "allow"
# Allow unnecessary wraps (API consistency)
unnecessary_wraps = "allow"
# Allow used underscore binding (intentional in some logging)
used_underscore_binding = "allow"
# Allow redundant pattern matching (sometimes more readable)
redundant_pattern_matching = "allow"
# Allow trivially copy pass by ref (API consistency)
trivially_copy_pass_by_ref = "allow"
# Allow clone on ref ptr (clearer than Arc::clone)
clone_on_ref_ptr = "allow"
# Allow needless pass by value (may be used in future)
needless_pass_by_value = "allow"
# Allow significant drop tightening (sometimes more readable)
significant_drop_tightening = "allow"
# Allow items after statements (local struct definitions)
items_after_statements = "allow"
# Allow match same arms (sometimes more explicit)
match_same_arms = "allow"
# Allow match wildcard for single variants (test code style)
match_wildcard_for_single_variants = "allow"
# Allow Option<Option<T>> for distinguishing null vs missing in JSON
option_option = "allow"
# Allow trait duplication in bounds (sometimes clearer)
trait_duplication_in_bounds = "allow"
# Allow manual clamp pattern (clearer intent)
manual_clamp = "allow"

[profile.dev]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"

# Profile for profiling (release with debug symbols)
[profile.profiling]
inherits = "release"
debug = true
strip = false

# Profile for benchmarks
[profile.bench]
debug = true
