[package]
name = "misskey-db"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[features]
default = []
test-utils = ["sea-orm/mock"]
# Enable query analysis tests (requires running PostgreSQL)
query-analysis = []

[dependencies]
misskey-common = { workspace = true }

# Database
sea-orm.workspace = true
sea-orm-migration.workspace = true

# Async
tokio.workspace = true
async-trait.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
chrono.workspace = true
uuid.workspace = true
thiserror.workspace = true
tracing.workspace = true

# Security
argon2.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["rt", "macros"] }
sea-orm = { workspace = true, features = ["mock"] }
maplit = "1.0"

[lints]
workspace = true
