[package]
name = "misskey-mfm"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
# Regex for parsing
regex = "1"
once_cell = "1"

# Serialization
serde.workspace = true
serde_json.workspace = true

# URL handling
url.workspace = true

[lints]
workspace = true
