[package]
name = "misskey-server"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "misskey"
path = "src/main.rs"

[dependencies]
misskey-common = { workspace = true }
misskey-db = { workspace = true }
misskey-core = { workspace = true }
misskey-federation = { workspace = true }
misskey-api = { workspace = true }
misskey-queue = { workspace = true }

# Web
axum.workspace = true
tower.workspace = true
tower-http.workspace = true

# Async
tokio.workspace = true

# Database
sea-orm.workspace = true

# Redis
fred.workspace = true

# Job Queue
apalis.workspace = true
apalis-redis.workspace = true
redis.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true

# Utilities
tracing.workspace = true
tracing-subscriber.workspace = true
url.workspace = true

[lints]
workspace = true
